Implementing addStudent()